# medihunter-v2

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  changes.todo  medicover_session.py  pyproject.toml
src/: api_urls.py  client.py  locale_handler.py
src/locales/en/LC_MESSAGES/: messages.mo  messages.po
src/locales/pl/LC_MESSAGES/: messages.mo  messages.po
src/medicover_client/: api_urls.py  client.py  exceptions.py  types.py
src/telegram_interface/: bot.py  find_appointments_command.py  helpers.py  login_command.py  monitorings_command.py  states.py  user_data.py
src/telegram_interface/commands/: active_monitorings.py  clear_search_history.py  find_appointments.py  future_appointments.py  login.py  monitorings.py  new_monitoring.py  settings.py  start.py
tests/: test_client.py
